--- a/src/main/webapp/pages/DashBoards/DashBoards.html
+++ b/src/main/webapp/pages/DashBoards/DashBoards.html
@@ -11,15 +11,15 @@
                     </wm-gridcolumn>
                 </wm-gridrow>
                 <wm-gridrow name="gridrow13">
-                    <wm-gridcolumn columnwidth="6" name="gridcolumn28">
+                    <wm-gridcolumn columnwidth="4" name="gridcolumn28">
                         <wm-composite name="composite2">
                             <wm-label class="col-md-3 control-label" name="label18" caption="Select a Dashboard"></wm-label>
                             <wm-container class="col-md-9" name="container2">
-                                <wm-select name="selectDashBoeard" dataset="Forms" datafield="All Fields" datavalue="Forms"></wm-select>
+                                <wm-select name="selectDashBoeard" dataset="bind:Variables.stvDashBoards.dataSet" datafield="dataValue" datavalue="bind:Variables.stvDashBoards.dataSet[0].dataValue" displayfield="dataValue"></wm-select>
                             </wm-container>
                         </wm-composite>
                     </wm-gridcolumn>
-                    <wm-gridcolumn columnwidth="6" name="gridcolumn29">
+                    <wm-gridcolumn columnwidth="4" name="gridcolumn29">
                         <wm-composite name="composite1" show="bind:Variables.EmployeesMunicipalities.dataSet.content.length > 1">
                             <wm-label class="col-md-3 form-control-static" name="label2" caption="Select Municipality" fontweight="bold"></wm-label>
                             <wm-container class="col-md-9" name="container1">
@@ -28,6 +28,7 @@
                             </wm-container>
                         </wm-composite>
                     </wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="4" name="gridcolumn16"></wm-gridcolumn>
                 </wm-gridrow>
                 <wm-gridrow name="gridrow18" padding="1em unset unset unset">
                     <wm-gridcolumn columnwidth="6" name="gridcolumn42">
@@ -41,7 +42,7 @@
                         <wm-composite name="composite3">
                             <wm-label class="col-md-3 control-label" name="label19" caption="By"></wm-label>
                             <wm-container class="col-md-9" name="container3">
-                                <wm-select name="selectTerms" dataset="Today,Week,Month,Quarter,Year" datavalue="Year" datafield="All Fields"></wm-select>
+                                <wm-select name="selectTerms" dataset="bind:Variables.stvPeriods.dataSet" datavalue="bind:Variables.stvPeriods.dataSet[0].dataValue" datafield="dataValue" displayfield="dataValue"></wm-select>
                             </wm-container>
                         </wm-composite>
                     </wm-gridcolumn>
@@ -54,11 +55,12 @@
                 </wm-gridrow>
                 <wm-gridrow name="gridrow15" padding="2em unset">
                     <wm-gridcolumn columnwidth="6" name="gridcolumn33" padding="unset 1em">
-                        <wm-chart type="Pie" title="FormTypes" height="250px" iconclass="wi wi-pie-chart" name="chartFormTypes" dataset="bind:Variables.svFormsData.dataSet" labeltype="percent" showlegend="top" xaxisdatakey="formType" yaxisdatakey="counts"></wm-chart>
+                        <wm-chart type="Pie" title="FormTypes" height="250px" iconclass="wi wi-pie-chart" name="chartFormTypes" dataset="bind:Variables.svFormsTypesData.dataSet" labeltype="percent" showlegend="top" xaxisdatakey="formType" yaxisdatakey="counts"
+                        theme="Orient"></wm-chart>
                     </wm-gridcolumn>
                     <wm-gridcolumn columnwidth="6" name="gridcolumn34" padding="unset 1em unset unset">
-                        <wm-chart type="Pie" title="Chart Categories" height="250px" iconclass="wi wi-pie-chart" dataset="bind:Variables.lvMasterForms.dataSet" aggregation="count" aggregationcolumn="formTypeId" groupby="formTypes.formType" xaxisdatakey="formTypes.formType"
-                        yaxisdatakey="formTypeId" labeltype="value" showlegend="top" name="chartCategories"></wm-chart>
+                        <wm-chart type="Pie" title="Chart Categories" height="250px" iconclass="wi wi-pie-chart" dataset="bind:Variables.svFormsCategoriesData.dataSet" labeltype="percent" showlegend="top" name="chartCategories" yaxisdatakey="counts" xaxisdatakey="category"
+                        theme="Orient"></wm-chart>
                     </wm-gridcolumn>
                 </wm-gridrow>
                 <wm-gridrow name="gridrow16" padding="2em unset">
@@ -73,7 +75,9 @@
                 </wm-gridrow>
                 <wm-gridrow name="gridrow17" padding="2em unset">
                     <wm-gridcolumn columnwidth="6" name="gridcolumn39"></wm-gridcolumn>
-                    <wm-gridcolumn columnwidth="6" name="gridcolumn40"></wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="6" name="gridcolumn40" padding="unset unset unset 1em">
+                        <wm-chart type="Pie" title="Vendors" height="250px" iconclass="wi wi-pie-chart" name="chartVendors" dataset="bind:Variables.svFormsVendorsData.dataSet" xaxisdatakey="vendorCompany" yaxisdatakey="counts" theme="Orient"></wm-chart>
+                    </wm-gridcolumn>
                 </wm-gridrow>
             </wm-layoutgrid>
         </wm-page-content>
