--- a/src/main/webapp/pages/DashBoards/DashBoards.html
+++ b/src/main/webapp/pages/DashBoards/DashBoards.html
@@ -11,24 +11,24 @@
                     </wm-gridcolumn>
                 </wm-gridrow>
                 <wm-gridrow name="gridrow13">
-                    <wm-gridcolumn columnwidth="4" name="gridcolumn28">
+                    <wm-gridcolumn columnwidth="5" name="gridcolumn28">
                         <wm-composite name="composite2">
-                            <wm-label class="col-md-3 control-label" name="label18" caption="Select a Dashboard"></wm-label>
-                            <wm-container class="col-md-9" name="container2">
+                            <wm-label class="col-md-5 control-label" name="label18" caption="Select a Dashboard"></wm-label>
+                            <wm-container class="col-md-7" name="container2">
                                 <wm-select name="selectDashBoeard" dataset="bind:Variables.stvDashBoards.dataSet" datafield="dataValue" datavalue="bind:Variables.stvDashBoards.dataSet[0].dataValue" displayfield="dataValue"></wm-select>
                             </wm-container>
                         </wm-composite>
                     </wm-gridcolumn>
-                    <wm-gridcolumn columnwidth="4" name="gridcolumn29">
+                    <wm-gridcolumn columnwidth="5" name="gridcolumn29" padding="unset unset unset 1em">
                         <wm-composite name="composite1" show="bind:Variables.EmployeesMunicipalities.dataSet.content.length > 1">
-                            <wm-label class="col-md-3 form-control-static" name="label2" caption="Select Municipality" fontweight="bold"></wm-label>
-                            <wm-container class="col-md-9" name="container1">
+                            <wm-label class="col-md-5 form-control-static" name="label2" caption="Select Municipality" fontweight="bold"></wm-label>
+                            <wm-container class="col-md-7" name="container1">
                                 <wm-select name="selectStandardUserMunicipalites" dataset="bind:Variables.EmployeesMunicipalities.dataSet" datafield="All Fields" displayfield="MunicipalityName" datavalue="bind:Variables.EmployeesMunicipalities.firstRecord"
                                 orderby="MunicipalityName:asc" placeholder=""></wm-select>
                             </wm-container>
                         </wm-composite>
                     </wm-gridcolumn>
-                    <wm-gridcolumn columnwidth="4" name="gridcolumn16"></wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="2" name="gridcolumn16"></wm-gridcolumn>
                 </wm-gridrow>
                 <wm-gridrow name="gridrow18" padding="1em unset unset unset">
                     <wm-gridcolumn columnwidth="6" name="gridcolumn42">
@@ -64,11 +64,10 @@
                     </wm-gridcolumn>
                 </wm-gridrow>
                 <wm-gridrow name="gridrow16" padding="2em unset">
-                    <wm-gridcolumn columnwidth="6" name="gridcolumn36" padding="unset 1em unset unset">
-                        <wm-chart type="Pie" title="chartFee" height="250px" iconclass="wi wi-pie-chart" dataset="bind:Variables.lvFees.dataSet" aggregation="count" aggregationcolumn="formStatuses.formTypes.id" groupby="feeType" xaxisdatakey="feeType" yaxisdatakey="formStatuses.formTypes.id"
-                        labeltype="value" showlegend="top" name="chartFee" orderby="id:desc"></wm-chart>
+                    <wm-gridcolumn columnwidth="6" name="gridcolumn36" padding="unset 1em">
+                        <wm-chart type="Pie" title="chartFee" height="250px" iconclass="wi wi-pie-chart" dataset="bind:Variables.svFeeByTypes.dataSet" labeltype="value" showlegend="top" name="chartFee" xaxisdatakey="fee" yaxisdatakey="counts" theme="Orient"></wm-chart>
                     </wm-gridcolumn>
-                    <wm-gridcolumn columnwidth="6" name="gridcolumn37" padding="unset unset unset 1em">
+                    <wm-gridcolumn columnwidth="6" name="gridcolumn37" padding="unset 1em unset unset">
                         <wm-chart type="Column" title="chartFee" height="250px" iconclass="wi wi-bar-chart" name="chartDay" dataset="bind:Variables.lvMasterForms.dataSet" aggregation="count" aggregationcolumn="formGuid" groupby="dateModified" xaxisdatakey="dateModified"
                         yaxisdatakey="formGuid" xdateformat="%c" ynumberformat=".f"></wm-chart>
                     </wm-gridcolumn>
