--- a/src/main/webapp/pages/DashBoards/DashBoards.html
+++ b/src/main/webapp/pages/DashBoards/DashBoards.html
@@ -32,24 +32,27 @@
                 </wm-gridrow>
                 <wm-gridrow name="gridrow18" padding="1em unset unset unset">
                     <wm-gridcolumn columnwidth="6" name="gridcolumn42">
-                        <wm-label padding="unset 0.5em" name="label20" caption="Select date" fontweight="bold"></wm-label>
+                        <wm-label padding="unset 0.5em unset unset" name="label20" caption="Select date" fontweight="bold"></wm-label>
                     </wm-gridcolumn>
                     <wm-gridcolumn columnwidth="6" name="gridcolumn43"></wm-gridcolumn>
                     <wm-gridcolumn columnwidth="4" name="gridcolumn44"></wm-gridcolumn>
                 </wm-gridrow>
                 <wm-gridrow name="gridrow14" padding="1em unset">
-                    <wm-gridcolumn columnwidth="4" name="gridcolumn30">
+                    <wm-gridcolumn columnwidth="3" name="gridcolumn30">
                         <wm-composite name="composite3">
                             <wm-label class="col-md-3 control-label" name="label19" caption="By"></wm-label>
                             <wm-container class="col-md-9" name="container3">
-                                <wm-select name="selectTerms" dataset="bind:Variables.stvPeriods.dataSet" datavalue="bind:Variables.stvPeriods.dataSet[0].dataValue" datafield="dataValue" displayfield="dataValue"></wm-select>
+                                <wm-select name="selectTerms" dataset="bind:Variables.stvPeriods.dataSet" datavalue="bind:Variables.stvPeriods.dataSet[0].dataValue" datafield="dataValue" displayfield="dataValue" on-change="selectTermsChange($event, $scope, newVal, oldVal)"></wm-select>
                             </wm-container>
                         </wm-composite>
                     </wm-gridcolumn>
-                    <wm-gridcolumn columnwidth="4" name="gridcolumn31">
+                    <wm-gridcolumn columnwidth="1" name="gridcolumn17" horizontalalign="center">
+                        <wm-label padding="unset 0.5em" name="label6" caption="OR"></wm-label>
+                    </wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="5" name="gridcolumn31">
                         <wm-datetime name="datetimeStart"></wm-datetime>
                     </wm-gridcolumn>
-                    <wm-gridcolumn columnwidth="4" name="gridcolumn32">
+                    <wm-gridcolumn columnwidth="3" name="gridcolumn32">
                         <wm-datetime name="datetimeEnd"></wm-datetime>
                     </wm-gridcolumn>
                 </wm-gridrow>
