--- a/src/main/webapp/pages/Forms/Forms.html
+++ b/src/main/webapp/pages/Forms/Forms.html
@@ -313,6 +313,8 @@
                                                     <wm-grid-column binding="addedAt" caption="Date Requested" type="string" datepattern="MM-dd-yyyy" formatpattern="toDate" edit-widget-type="text" show="true" filterwidget="date" readonly="false"></wm-grid-column>
                                                     <wm-grid-column binding="users.fullName" caption="Requested By" type="string" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
                                                     <wm-grid-column binding="masterInspections.inspectionOutcome.outcome" caption="Outcome" type="string" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
+                                                    <wm-grid-action key="addNewRow" display-name="Request Inspection" show="true" class="btn-primary" iconclass="wi wi-plus" title="Request Inspection" action="Widgets.dialogInspectionRequest.open()"
+                                                    shortcutkey="" disabled="false"></wm-grid-action>
                                                 </wm-grid>
                                             </wm-gridcolumn>
                                         </wm-gridrow>
@@ -921,6 +923,36 @@
             <wm-dialogactions name="dialogactions8">
                 <wm-button class="btn-primary" caption="OK" on-click="Variables.DeleteVendorFromForm.invoke();buttonDeleteVendorOKClick($event, $scope)" name="buttonDeleteVendorOK" iconclass="wi wi-done"></wm-button>
                 <wm-button class="btn-secondary" caption="Cancel" type="button" margin="unset 0.5em" name="buttonDeleteVendorCancel" iconclass="wi wi-cancel" on-click="Widgets.dialogVendorDeleteConf.close()"></wm-button>
+            </wm-dialogactions>
+        </wm-dialog>
+    </wm-view>
+    <wm-view class="dialog-view" name="viewInspectionRequest">
+        <wm-dialog dialogtype="design-dialog" modal="true" title="Inspection Request" iconclass="wi wi-file-text" name="dialogInspectionRequest">
+            <wm-layoutgrid name="layoutgrid29_1">
+                <wm-gridrow name="gridrow81_3" padding="1em unset">
+                    <wm-gridcolumn columnwidth="12" name="gridcolumn153_2" horizontalalign="center">
+                        <wm-composite name="composite5_2" padding="unset 2em" required="true">
+                            <wm-label class="col-md-3 control-label" name="label93" caption="Inspection Type"></wm-label>
+                            <wm-container class="col-md-9" name="container8">
+                                <wm-select name="selectInspectionDesign" dataset="bind:Variables.svDistinctInspectionDesignsForFormType.dataSet" datafield="All Fields" displayfield="inspectDesignName"></wm-select>
+                            </wm-container>
+                        </wm-composite>
+                    </wm-gridcolumn>
+                </wm-gridrow>
+                <wm-gridrow name="gridrow82" padding="1em unset">
+                    <wm-gridcolumn columnwidth="12" name="gridcolumn155_1" horizontalalign="center">
+                        <wm-composite name="composite6" padding="unset 2em" required="true">
+                            <wm-label class="col-md-3 control-label" name="label94" caption="Date"></wm-label>
+                            <wm-container class="col-md-9" name="container9">
+                                <wm-datetime name="datetimeInspectionRequest" mindate="CURRENT_DATE"></wm-datetime>
+                            </wm-container>
+                        </wm-composite>
+                    </wm-gridcolumn>
+                </wm-gridrow>
+            </wm-layoutgrid>
+            <wm-dialogactions name="dialogactions10">
+                <wm-button class="btn-sec" caption="Request" type="button" margin="unset 0.5em" name="button2InspectionRequest" on-click="button2InspectionRequestClick($event, $scope)"></wm-button>
+                <wm-button class="btn-primary" caption="Close" on-click="closeDialog()" name="button21"></wm-button>
             </wm-dialogactions>
         </wm-dialog>
     </wm-view>
