--- a/src/main/webapp/pages/MyFees/MyFees.html
+++ b/src/main/webapp/pages/MyFees/MyFees.html
@@ -39,9 +39,11 @@
                                             <wm-grid-column binding="feeType" caption="Fee Type" type="string" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
                                             <wm-grid-column binding="formGuid" caption="Form Guid" type="string" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
                                             <wm-grid-column binding="formTitle" caption="Form Title" type="string" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
-                                            <wm-grid-action key="addNewRow" display-name="Add All to Cart" iconclass="wi wi-plus" show="true" class="btn-primary" action="" shortcutkey="" title="AddAll"></wm-grid-action>
-                                            <wm-grid-row-action key="updaterow" display-name="" title="ViewForm" iconclass="wi wi-search" show="true" class="btn-transparent" action=""></wm-grid-row-action>
-                                            <wm-grid-row-action key="deleterow" display-name="" title="AddToCart" iconclass="wi wi-cart" show="true" class="btn-transparent" action=""></wm-grid-row-action>
+                                            <wm-grid-column binding="rowOperations" caption="Actions" type="custom" width="120px" readonly="true" edit-widget-type="text" sortable="false" searchable="false" show="true"></wm-grid-column>
+                                            <wm-grid-action key="addNewRow" display-name="Add All to Cart" show="true" class="btn-primary" iconclass="wi wi-plus" title="AddAll" action="" shortcutkey="" disabled="false"></wm-grid-action>
+                                            <wm-grid-row-action key="updaterow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-search" title="ViewForm" action="Variables.ngViewForm.invoke()" disabled="false"></wm-grid-row-action>
+                                            <wm-grid-row-action key="deleterow" display-name="" show="bind:!itemInCart(row.getProperty('feeId'))" class="btn-transparent" iconclass="wi wi-cart" title="AddToCart" action="Variables.svInsertIntoCart.invoke()"
+                                            disabled="false"></wm-grid-row-action>
                                         </wm-grid>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
